<resources>
    <string name="app_name">tel</string>
    <string name="app_name_capital">TEL</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_one">All Solutions</string>
    <string name="navigation_two">Favorites</string>
    <string name="navigation_three">Settings</string>
    <string name="navigation_four">Agriculture &amp; Tools</string>
    <string name="navigation_five">Energy and Cooking</string>
    <string name="navigation_six">Health &amp; Medical Care</string>
    <string name="navigation_seven">Education &amp; Connectivity</string>
    <string name="navigation_eight">Housing &amp; Transport</string>
    <string name="navigation_nine">Water &amp; Sanitation</string>
    <string name="navigation_ten">Additional Solutions</string>
    <string name="navigation_eleven">About Us</string>

    <string name="action_sync">Sync Json</string>
    <string name="sync_json_question">Are you sure you want to update the database? Checking for updates requires an internet connection and may result in charges when not on WiFi.</string>
    <string name="not_connected">You are not connected to the internet!</string>
    <string name="data_connected">Are you sure you want to download the database? Downloading the database while roaming may result in charges.</string>

    <string name="okay">Okay</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>

    <string name="action_back">Back</string>
    <string name="action_email">Email</string>
    <string name="action_telWebsite">Solution Webpage</string>
    <string name="action_website">Navigate</string>

    <string name="loading_text">Practical solutions to problems of poverty. No internet required.</string>

    <string name="image_of_solution">image of solution</string>
    <string name="favorite_picture">favorite picture</string>
    <string name="solution_overview_amp_benefits"><![CDATA[Solution Overview & Benefits]]></string>
    <string name="history_amp_development"><![CDATA[History & Development]]></string>
    <string name="availability">Availability</string>
    <string name="specifications">Specifications</string>
    <string name="additional_information">Additional Information</string>
    <string name="contact">Contact</string>

    <string name="tel_logo">Tel Logo</string>
    <string name="more_info_on_site">Additional Information about this solution can be found on the tel website. May incur data charges.\n</string>

    <string name="about_us_text">TEL is a nonprofit organization dedicated to bringing communities out of poverty by driving the adoption of innovative, cost-effective and sustainable solutions that improve lives at the bottom of the pyramid.\n\nInterested in implementing appropriate technology solutions in developing communities?\n\nContact us and tell us about your project!</string>
    <string name="email_us_at">Email us at: </string>
    <string name="iknow">i know</string>
</resources>
