<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/solutionImage"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:contentDescription="@string/image_of_solution" />

                <ImageView
                    android:id="@+id/gradient"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/image_of_solution"
                    android:src="@drawable/gradient_shape" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="90dp"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/solutionName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/solutionCompany"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textColor="#e0e0e0"
                        android:textSize="15dp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/favoritePicture"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:adjustViewBounds="false"
                    android:contentDescription="@string/favorite_picture" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/overviewandbenefits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/solution_overview_amp_benefits"
                    android:textColor="@color/orange"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/historyanddevelopment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history_amp_development"
                    android:textColor="@color/orange"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/histAndDevText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/availability"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/availability"
                    android:textColor="@color/orange"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/availabilityText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/specifications"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/specifications"
                    android:textColor="@color/orange"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/specificationsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/additionalinformation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/additional_information"
                    android:textColor="@color/orange"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/addtionalInformationText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact"
                    android:textColor="@color/orange"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/contactText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>