<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill_horizontal">

    <ImageView
        android:id="@+id/action_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orderInCategory="0"
        android:paddingRight="10dp"
        android:src="@drawable/ic_chevron_left_white_24px"
        android:title="@string/action_back"
        android:adjustViewBounds="false"
        android:layout_alignTop="@+id/telTextView"
        android:layout_alignBottom="@+id/telTextView"
        android:cropToPadding="true"
        android:paddingLeft="-5dp" />

    <TextView
        android:id="@+id/telTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="170dp"
        android:text="tel"
        android:textColor="#ffffff"
        android:textSize="@dimen/abc_text_size_large_material"
        android:textStyle="bold"
        android:textIsSelectable="false"
        android:singleLine="false"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/linearLayout"
        android:layout_toRightOf="@+id/action_back"
        android:layout_toEndOf="@+id/action_back" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingRight="2dp"
        android:layout_alignParentBottom="false"
        android:layout_alignTop="@+id/telTextView"
        android:layout_alignBottom="@+id/telTextView"
        android:id="@+id/linearLayout">

        <ImageView
            android:id="@+id/action_email"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/telTextView"
            android:layout_toRightOf="@+id/telTextView"
            android:orderInCategory="10"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/ic_mail_outline_white_24px"
            android:title="@string/action_email"
            android:baselineAlignBottom="false" />

        <ImageView
            android:id="@+id/action_call"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/action_email"
            android:layout_toRightOf="@+id/action_email"
            android:orderInCategory="20"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/ic_call_white_24px"
            android:title="@string/action_call" />

        <ImageView
            android:id="@+id/action_website"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/action_call"
            android:layout_toRightOf="@+id/action_call"
            android:orderInCategory="30"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/ic_language_white_24px"
            android:title="@string/action_website"
            android:layout_marginRight="5dp" />

    </LinearLayout>

</RelativeLayout>