<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/tel_logo"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp"
            android:src="@drawable/tel_logo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:text="About Us"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/aboutUsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/about_us_text"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:text="Contact Us"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="15dp"
                android:src="@drawable/ic_language_black_24px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_us_at"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/contactEmailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Contact@techxlab.org"
                android:textColor="@color/blue"
                android:textSize="16sp" />

        </LinearLayout>
        <!--&lt;!&ndash;Todo make this into a listview&ndash;&gt;-->
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:paddingLeft="5dp"-->
            <!--android:paddingTop="10dp"-->
            <!--android:text="App Developed By:"-->
            <!--android:textSize="20sp"-->
            <!--android:textStyle="bold" />-->

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal"-->
            <!--android:paddingBottom="5dp"-->
            <!--android:paddingLeft="5dp"-->
            <!--android:paddingRight="5dp"-->
            <!--android:paddingTop="5dp">-->

            <!--<ImageView-->
                <!--android:id="@+id/andrewCorpImage"-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="100dp"-->
                <!--android:src="@drawable/andrew_corp" />-->

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="end"-->
                <!--android:paddingLeft="5dp"-->
                <!--android:text="Volunteer Developer\n\nWentworth Institute of Technology Student\nI am so lucky to be apart of such a good project to help people who are in need." />-->
        <!--</LinearLayout>-->

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal"-->
            <!--android:paddingBottom="5dp"-->
            <!--android:paddingLeft="5dp"-->
            <!--android:paddingRight="5dp"-->
            <!--android:paddingTop="5dp">-->

            <!--<ImageView-->
                <!--android:id="@+id/jaredConroyImage"-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="100dp"-->
                <!--android:src="@drawable/andrew_corp" />-->

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="end"-->
                <!--android:paddingLeft="5dp"-->
                <!--android:text="Volunteer Developer\n\nWentworth Institute of Technology Student\nI am so lucky to be apart of such a good project to help people who are in need." />-->
        <!--</LinearLayout>-->

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal"-->
            <!--android:paddingBottom="5dp"-->
            <!--android:paddingLeft="5dp"-->
            <!--android:paddingRight="5dp"-->
            <!--android:paddingTop="5dp">-->

            <!--<ImageView-->
                <!--android:id="@+id/shirshakSharmaImage"-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="100dp"-->
                <!--android:src="@drawable/andrew_corp" />-->

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="end"-->
                <!--android:paddingLeft="5dp"-->
                <!--android:text="Volunteer Developer\n\nWentworth Institute of Technology Student\nI am so lucky to be apart of such a good project to help people who are in need." />-->
        <!--</LinearLayout>-->


    </LinearLayout>

</ScrollView>